Add various configuration resources that were accidentally excluded.